# etom

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
etom/: __init__.py  core.py
tests/: test_encrypted_toml.py
