[tool.poetry]
name = "etom"
version = "0.4.2"
description = "A simple project to deal with encrypted toml files"
authors = ["Jason <git@jasoncameron.dev>"]
license = "GPLv3"
readme = ["README.md", "LICENSE"]
keywords = ["toml", "encryption", "decryption"]
repository  = "https://github.com/JasonLovesDoggo/etom"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
toml = "^0.10.2"
cryptography = "^43.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pytest = "^6.2.5"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
